--- a/about-bio-sophia_banda.html
+++ b/about-bio-sophia_banda.html
@@ -12,7 +12,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="css/style.production.css">
+        <!-- <link rel="stylesheet" type="text/css" href="css/style.production.css"> -->
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body class="about-html">
         <header class="page-header">
@@ -4849,12 +4850,13 @@
             </div>
             <div class="bio-info">
                 <article>
-                    *To be majorly edited*<br>
-                    The locations that you see above are some of the bigger parts of my living journey.
-                    Born in the North Bay of California, I spent much of my time growing up in the Bay Area, and the Golden Gate Bridge
-                    is a staple of my childhood memories. I lived briefly in Manuel Antonio, Costa Rica before moving to NYC for 10 years. 
-                    Left NYC to spend 6 years in Miami before falling in love and being relocated to Savannah, GA before finally getting
-                    pregnant (surprise!) and buying our home in Durham, NC to be near my partner's family. 
+                  I am originally from the North Bay of California, and much of my time growing up was spent in 
+                  the San Francisco Bay Area. The above images highlight the cities where I've lived the longest. 
+                  Additional cities have included Savannah, Georgia, and Manual Antonio, Costa Rica. For now, 
+                  I've landed in Durham, North Carolina, with my two favorite  boys. Those whom I define as my closest 
+                  are what matter most to me, and my current professional goal is to be a vital contributor to making 
+                  the web a more accessible place. If you'd like to learn more, feel free to drop me a note or ask me 
+                  a question <a href="contact-sophia_banda.html#contact">here.</a>  
                 </article>
             </div>
         </main>
