FINAL final bio

--- a/about-bio-sophia_banda.html
+++ b/about-bio-sophia_banda.html
@@ -4850,13 +4850,11 @@
             </div>
             <div class="bio-info">
                 <article>
-                  I am originally from the North Bay of California, and much of my time growing up was spent in 
-                  the San Francisco Bay Area. The above images highlight the cities where I've lived the longest. 
-                  Additional cities have included Savannah, Georgia, and Manual Antonio, Costa Rica. For now, 
-                  I've landed in Durham, North Carolina, with my two favorite  boys. Those whom I define as my closest 
-                  are what matter most to me, and my current professional goal is to be a vital contributor to making 
-                  the web a more accessible place. If you'd like to learn more, feel free to drop me a note or ask me 
-                  a question <a href="contact-sophia_banda.html#contact">here.</a>  
+                  I've spent most of my life in the cities displayed above and have had the luck and pleasure of living 
+                  in some other pretty cool locations. I currently call Durham, North Carolina home with my two favorite boys. 
+                  Those whom I define as my closest are what matter most to me, and my current professional goal is to be a 
+                  vital contributor to making the web a more accessible place. If you'd like to learn more, feel free to drop
+                  me a note or ask me a question <a href="contact-sophia_banda.html#contact">here.</a>  
                 </article>
             </div>
         </main>
