Made various changes to CSS to repair sizing issues

--- a/about-bio-sophia_banda.html
+++ b/about-bio-sophia_banda.html
@@ -35,7 +35,7 @@
                 <h1>About</h1>
                 <p></p>
                 <svg class="where-lived"
-                   width="80%"
+                   width="1000px"
                    height="auto"
                    viewBox="0 0 508.00002 132.29167"
                    version="1.1"
