returned svg size, resized svg in css, changed media query font sizing

--- a/about-bio-sophia_banda.html
+++ b/about-bio-sophia_banda.html
@@ -35,7 +35,7 @@
                 <h1>About</h1>
                 <p></p>
                 <svg class="where-lived"
-                   width="1200px"
+                   width="900px"
                    height="auto"
                    viewBox="0 0 508.00002 132.29167"
                    version="1.1"
@@ -4854,7 +4854,7 @@
                   in some other pretty cool locations. I currently call Durham, North Carolina home with my two favorite boys. 
                   Those whom I define as my closest are what matter most to me, and my current professional goal is to be a 
                   vital contributor to making the web a more accessible place. If you'd like to learn more, feel free to drop
-                  me a note or ask me a question <a href="contact-sophia_banda.html#contact">here.</a>  
+                  me a note or ask me a question <a href="contact-sophia_banda.html#contact" id="here">here.</a>  
                 </article>
             </div>
         </main>
