updated profile photo

--- a/about-bio-sophia_banda.html
+++ b/about-bio-sophia_banda.html
@@ -4848,15 +4848,15 @@
                     </g>
                 </svg>
             </div>
-            <div class="bio-info">
-                <article>
+            <!-- <div class="bio-info"> -->
+                <article class="bio-info">
                   I've spent most of my life in the cities displayed above and have had the luck and pleasure of living 
                   in some other pretty cool locations. I currently call Durham, North Carolina home with my two favorite boys. 
                   Those whom I define as my closest are what matter most to me, and my current professional goal is to be a 
                   vital contributor to making the web a more accessible place. If you'd like to learn more, feel free to drop
                   me a note or ask me a question <a href="contact-sophia_banda.html#contact" id="here">here.</a>  
                 </article>
-            </div>
+            <!-- </div> -->
         </main>
         <footer class="page-footer">
             <p>Find me on:</p>
