removed css span from gird, projects, added alt to svg

--- a/about-bio-sophia_banda.html
+++ b/about-bio-sophia_banda.html
@@ -35,6 +35,7 @@
                 <h1>About</h1>
                 <p></p>
                 <svg class="where-lived"
+                   alt="Animated images representing of San Fransico, CA, NYC, NY and Miami, FL"
                    width="900px"
                    height="auto"
                    viewBox="0 0 508.00002 132.29167"
