--- a/about-bio-sophia_banda.html
+++ b/about-bio-sophia_banda.html
@@ -4851,11 +4851,15 @@
             </div>
             <!-- <div class="bio-info"> -->
                 <article class="bio-info">
-                  I've spent most of my life in the cities displayed above and have had the luck and pleasure of living 
-                  in some other pretty cool locations. I currently call Durham, North Carolina home with my two favorite boys. 
-                  Those whom I define as my closest are what matter most to me, and my current professional goal is to be a 
-                  vital contributor to making the web a more accessible place. If you'd like to learn more, feel free to drop
-                  me a note or ask me a question <a href="contact-sophia_banda.html#contact" id="here">here.</a>  
+                  <p>I've spent most of my life in the cities displayed above and have had the luck and pleasure of living 
+                    in some other pretty cool locations. I currently call Durham, North Carolina home with my two favorite boys.</p>
+                  <p>I have been a certified fitness instructor since 2009, and the kettlebell has been my specialty since 2016.
+                    While I am no longer working in the fitness industry, fitness is still a very large part of my life, and I have a 
+                    strong love for the kettlebell.</p>
+                  <p>I've recently discovered how cool CSS can be and I'm very proud of the animations created above, so please check 
+                    them out.</p> 
+                  <p>If you'd like to learn more, feel free to drop me a note or ask me a question 
+                    <a href="contact-sophia_banda.html#contact" id="here">here.</a></p> 
                 </article>
             <!-- </div> -->
         </main>
